Fixing text, font - was overlapping the image on iphone

--- a/webapp/public/css/landing-page.css
+++ b/webapp/public/css/landing-page.css
@@ -158,7 +158,7 @@ p.copyright {
 }
 .indexcaption{
     font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B';
-    font-size: 42px;
+    font-size: 35px;
     font-weight: 100;
 }
 
@@ -169,6 +169,6 @@ p.copyright {
 
 .indexsubtext{
     font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B';
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 100;
 }
